--- a/index.html
+++ b/index.html
@@ -25,22 +25,22 @@
 				</ol>
 				<div class="carousel-inner">
 					<div class="item active">
-						<img src="./image/img1.png" class="img-responsive" alt="..." />
+						<img src="./image/img1.jpg"  alt="..." />
 					</div>
 					<div class="item">
-						<img src="./image/img2.png" class="img-responsive" alt="..." />
+						<img src="./image/img2.jpg"  alt="..." />
 					</div>
 					<div class="item">
-						<img src="./image/img3.png" class="img-responsive" alt="..." />
+						<img src="./image/img3.jpg"  alt="..." />
 					</div>
 					<div class="item">
-						<img src="./image/img4.png" class="img-responsive" alt="..." />
+						<img src="./image/img4.jpg"  alt="..." />
 					</div>
 					<div class="item">
-						<img src="./image/img5.png" class="img-responsive" alt="..." />
+						<img src="./image/img5.jpg"  alt="..." />
 					</div>
 					<div class="item">
-						<img src="./image/img6.png" class="img-responsive" alt="..." />
+						<img src="./image/img6.jpg"  alt="..." />
 					</div>
 				</div>
 			</div>
