--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0" />
 	<link rel="stylesheet" href="./bootstrap/css/bootstrap.min.css" />
+	<link rel="stylesheet" href="./bootstrap/css/bootstrap.css" />
 	<link rel="stylesheet" type="text/css" href="./css/sample.css">
 	<script src="./script/jquery.min.js"></script>
 	<script src="./bootstrap/js/bootstrap.min.js"></script>
@@ -25,22 +26,22 @@
 				</ol>
 				<div class="carousel-inner">
 					<div class="item active">
-						<img src="./image/img1.jpg"  alt="..." />
+						<img src="./image/img1.jpg" class="carousel-img" alt="..." />
 					</div>
 					<div class="item">
-						<img src="./image/img2.jpg"  alt="..." />
+						<img src="./image/img2.jpg" class="carousel-img" alt="..." />
 					</div>
 					<div class="item">
-						<img src="./image/img3.jpg"  alt="..." />
+						<img src="./image/img3.jpg" class="carousel-img" alt="..." />
 					</div>
 					<div class="item">
-						<img src="./image/img4.jpg"  alt="..." />
+						<img src="./image/img4.jpg" class="carousel-img" alt="..." />
 					</div>
 					<div class="item">
-						<img src="./image/img5.jpg"  alt="..." />
+						<img src="./image/img5.jpg" class="carousel-img" alt="..." />
 					</div>
 					<div class="item">
-						<img src="./image/img6.jpg"  alt="..." />
+						<img src="./image/img6.jpg" class="carousel-img" alt="..." />
 					</div>
 				</div>
 			</div>
@@ -49,7 +50,7 @@
 	<div class="container-fluid">
 		<div class="row">
 			<div class="caption">
-				<div class="text-center">
+				<div class="text-center custom-font">
 					<h3>和牛在中国</h3>
 					<p>和牛美食文化（北京）有限公司成立于2015年</p>
 					<p>专注于纯血和牛在中国的产业化发展</p>
@@ -68,21 +69,21 @@
 		
 		<div class="float-bar" id="float_bar" style="display: block;">
 		    <ul class="float-ul">
-		        <li class="float-li" >
-		            <img src="./image/weixin.png" class="sidebar-img contact-us"  data-trigger="hover" data-container="body"  data-placement="left"/>
-			        <div class="hide">
+		        <li class="float-li contact-us"  data-trigger="hover" data-container="body"  data-placement="left" >
+		            <img src="./image/weixin.png" class="sidebar-img" />
+			        <div class="hide contact">
 				        <img src="./image/weixinqr.png" class="contact-info"/>
 			        </div>
 		        </li>
-		        <li class="float-li" >
-		            <img src="./image/weibo.png" class="sidebar-img contact-us" data-trigger="hover" data-container="body"  data-placement="left"/>
-			        <div class="hide">
+		        <li class="float-li contact-us"  data-trigger="hover" data-container="body"  data-placement="left" >
+		            <img src="./image/weibo.png" class="sidebar-img"/>
+			        <div class="hide contact">
 			            <img src="./image/weiboqr.png" class="contact-info"/>
 			        </div>
 		        </li>
-		        <li class="float-li" >
-		            <img src="./image/phone.png" class="sidebar-img contact-us" data-trigger="hover" data-container="body"  data-placement="left"/>
-			        <div class="hide">
+		        <li class="float-li contact-us"  data-trigger="hover" data-container="body"  data-placement="left" >
+		            <img src="./image/phone.png" class="sidebar-img"/>
+			        <div class="hide contact">
 		            	<span>010-63922571</span>
 			        </div>
 		        </li>
