加入版权信息

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8" />
-	<title>纯血和牛在中国</title>
+	<title>纯血和牛</title>
 
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0" />
 	<link rel="stylesheet" href="./bootstrap/css/bootstrap.min.css" />
@@ -11,10 +11,9 @@
 	<script src="./bootstrap/js/bootstrap.min.js"></script>
 </head>
 <body>
-	<div class="container-fluid">
-
+	<!-- <div class="container"> -->
 		<div class="row">
-			<div id="myCarousel" class="carousel slide">
+			<div id="myCarousel" class="carousel slide col-xs-12">
 				<ol class="carousel-indicators">
 					<li data-target="#myCarousel" data-slide-to="0" class="active"></li>
 					<li data-target="#myCarousel" data-slide-to="1" ></li>
@@ -45,25 +44,21 @@
 				</div>
 			</div>
 		</div>
-	</div>
-	<div class="container-fluid">
-		<div class="row">
-			<div class="caption">
-				<div class="text-center custom-font">
-					<h3>和牛在中国</h3>
-					<p>和牛美食文化（北京）有限公司成立于2015年</p>
-					<p>专注于纯血和牛在中国的产业化发展</p>
-					<p>作为一个新型农业公司，我们在领先拥有纯血和牛种质资源的基础上，</p>
-					<p>以创新的生产组织架构和品牌营销为牵引力</p>
-					<p>结合现代农业科技与市场需求，</p>
-					<p>创立和牛繁育饲养标准、创新产品研发、推广和牛美食文化</p>
-					<p>让更多人领略到纯血和牛的独到风味，</p>
-					<p>使纯血和牛在中国有更为精进的发展，</p>
-					<p>成为世界高端肉牛供应的重要力量。</p>
-				</div>
+		<div class="caption">
+			<div class="text-center custom-font">
+				<h3>和牛在中国</h3>
+				<p>和牛美食文化（北京）有限公司成立于2015年</p>
+				<p>专注于纯血和牛在中国的产业化发展</p>
+				<p>作为一个新型农业公司，我们在领先拥有纯血和牛种质资源的基础上，</p>
+				<p>以创新的生产组织架构和品牌营销为牵引力</p>
+				<p>结合现代农业科技与市场需求，</p>
+				<p>创立和牛繁育饲养标准、创新产品研发、推广和牛美食文化</p>
+				<p>让更多人领略到纯血和牛的独到风味，</p>
+				<p>使纯血和牛在中国有更为精进的发展，</p>
+				<p>成为世界高端肉牛供应的重要力量。</p>
 			</div>
 		</div>
-	</div>
+	<!-- </div> -->
 	<div class="container-fluid">
 		
 		<div class="float-bar" id="float_bar" style="display: block;">
@@ -88,6 +83,11 @@
 		        </li>
 		    </ul>
 	    </div>
+	</div>
+	<div class="footer">
+		<div class="text-center">
+	    	Copyright&nbsp;©&nbsp;&nbsp;和牛美食文化（北京）有限公司  Design
+	   	</div>
 	</div>
 
 </body>
